fixed vertical spacing

--- a/src/shared/components/Terms/styles.scss
+++ b/src/shared/components/Terms/styles.scss
@@ -62,7 +62,7 @@
 
 .tabs-outer {
   position: relative;
-  margin: 20px 0;
+  margin: 25px 0;
 }
 
 .tabs-inner {
